Set the api on the base url, set the doc expansion to list and added register endpoint
